fix opacity and text alignments

--- a/src/assets/welcome.css
+++ b/src/assets/welcome.css
@@ -13,11 +13,11 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  min-height: 722px;
+  min-height: 550px;
   width: 100%;
   align-items: flex-start;
   justify-content: center;
-  padding: 135px 80px;
+  padding: 60px 80px;
 }
 
 .hero-background {
@@ -27,7 +27,7 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
-  opacity: 0.87;
+  opacity: 83%;
 }
 
 .hero-text-container {
@@ -85,6 +85,7 @@
   color: #f3f3f5;
   font-size: 17px;
   margin-top: 13px;
+  text-align: left;
 }
 
 .cta-button {
